Fix the slow updades when working with a tablet due to the lack of sync'ing

It seems like on Linux qglx_getProcAddress("glFenceSyncARB") returns a
pointer to a dumb function, which is not null, does not crash, but yet
does abolutely nothing when called, setting the openGL error code to
GL_INVALID_OPERATION. This patch makes Linux version fo Krita always
request non-ARB variant of function and Windows version --- ARB-variant.
The latter idea was tested by Boud and implemented in b300060d2, which
had to be reverted in preparation for this commit.

BUG:331759